# newmux

./: .gitignore  AGENTS.md  README.md
config/: newmux-dev.tmux.conf
docs/performance/: live-scroll-baseline-2026-05-31.md
ghostty/: newmux.config
ghostty-config/: newmux.config  scroll-test.config
ghostty-src/macos/: build.nu
ghostty-src/src/: Surface.zig
scripts/: bench-current-newmux.sh  bench-live-append.sh  bench-live-scroll-test.sh  bench-live-scroll.sh  bench-prompt-instances.sh  build-ghostty.sh  build-newmux.sh  generate-prompt-scroll-fixture.sh  install-ghostty-newmux.sh  install-patched-ghostty-app.sh  live-scroll-animation.sh  newmux-copy-to-clipboard.sh  open-codex-resume-scroll-test-ghostty.sh  open-live-scroll-test-ghostty.sh  open-newmux-ghostty-stress.sh  open-newmux-ghostty.sh  open-scroll-test-ghostty.sh  open-staged-live-scroll-test-ghostty.sh  probe-active-scroll-ui.py  probe-live-scroll-ui.sh  probe-scroll-latency-ui.py  run-newmux.sh  scroll-test-shell.sh  seed-codex-resume-test.sh  seed-live-scroll-test.sh  stage-codex-resume-scroll-test.sh  stage-live-scroll-history-test.sh  start-newmux-codex-resume-test.sh  start-newmux-fresh.sh  start-newmux-live-scroll-test.sh  start-newmux-scroll-test.sh  test-ghostty-config.sh  test-newmux.sh
tmux/: .gitignore  Makefile.am  SOURCE_LAYOUT.md  tmux.h
tmux/commands/: cmd-copy-mode.c  cmd-send-keys.c
tmux/core/: tmux.c
tmux/options/: options-table.c
tmux/screen/: screen-write.c  screen.c
tmux/server/: server-client.c
tmux/terminal/: input.c  tty-keys.c  tty.c
tmux/windows/: window-copy.c  window.c
